adding website link

--- a/biodata.html
+++ b/biodata.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 2 Bioadata</title>
     <style>
+        body
+        {
+            background-color: #ffc4da;
+        }
         table
         {
             border-collapse: collapse;
+            background-color: #fff0ff;
         }
         
         th, td 
@@ -23,47 +28,47 @@
     </style>
 </head>
 <body>
-    <h1>BIODATA</h1>
+    <h1 align="center">MY PERSONAL BIODATA </h1>
     <table align="center" border="1" width="750px">
 
         <tr>
             <td><b>Name</b></td>
-            <td align="center">Amirah</td>
-            <td rowspan="1" align="center"><img src ="sicantekss.jpg" alt="my Photo" width="200"></td>
+            <td>Amirah</td>
+            <td rowspan="1"><img src ="sicantekss.jpg" alt="my Photo" width="200"></td>
         </tr>
         <tr>
             <td><b>Date of Birth</b></td>
-            <td colspan="2" align="center">18 October 2003</td>
+            <td colspan="2">18 October 2003</td>
         </tr>
         <tr>
             <td><b>Religion</b></td>
-            <td colspan="2" align="center">Islam</td>
+            <td colspan="2">Islam</td>
         </tr>
         <tr>
             <td><b>Race</b></td>
-            <td colspan="2" align="center">Melayu</td>
+            <td colspan="2">Melayu</td>
         </tr>
         <tr>
             <td rowspan="4"><b>Address</b></td>
             <td><b>Street</b></td>
-            <td align="center">Jalan Parit Haji Abdul Kadir</td>
+            <td>Jalan Parit Haji Abdul Kadir</td>
             <tr>
                 <td><b>Town</b></td>
-                <td align="center">Parit Raja</td>
+                <td>Parit Raja</td>
             </tr>
             <tr>
                 <td><b>District</b></td>
-                <td align="center">Batu Pahat</td>
+                <td>Batu Pahat</td>
             </tr>
             <tr>
                 <td><b>State</b></td>
-                <td align="center">Johor</td>
+                <td>Johor</td>
             </tr>
         </tr>
         <tr>
             <td rowspan="3"><b>Contact</b></td>
             <td><b>Mobile Phone</b></td>
-            <td align="center">019-5393646</td>
+            <td>019-5393646</td>
 
             <tr>
                 <td><b>Social Media</b></td>
@@ -77,7 +82,7 @@
             </tr>
             <tr>
                 <td><b>Website</b></td>
-                <td>www.hdcdjsjcjcb.com</td>
+                <td>https://mikaaee.github.io/lab2wd/biodata.html</td>
             </tr>
         </tr>
         <tr>
